# SE_1_SoSE24

./: .gitignore  README.md  leistungstest.py  main.py  my_classes.py  my_functions.py  pyproject.toml  test.py
